...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/freeboard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <in.koreatech.koin.core.appbar.AppBarBase
        android:id="@+id/koin_base_app_bar_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonBackground="@drawable/ic_back_arrow"
        app:rightButtonBackground="@drawable/ic_create" />


...
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/article_title"
                tools:text="2019.03.02" />

            <Button
                android:id="@+id/article_comment_write_button"
                android:layout_width="69.2dp"
                android:layout_height="28.7dp"
                android:layout_marginStart="9.8dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="13.8dp"
                android:background="@drawable/button_rect_normal"
...
                app:layout_constraintBottom_toBottomOf="@+id/article_title_content_border"
                app:layout_constraintStart_toEndOf="@+id/article_comment_write_button"
                app:layout_constraintTop_toBottomOf="@+id/article_view_count_korean"
                app:layout_constraintVertical_bias="0.6" />

            <Button
                android:id="@+id/article_edit_button"
                android:layout_width="51.4dp"
                android:layout_height="28.7dp"
                android:layout_marginStart="9.8dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="13.8dp"
                android:background="@drawable/button_rect_normal"
...
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/article_title_content_border"
                app:layout_constraintStart_toEndOf="@+id/article_edittext_password"
                app:layout_constraintTop_toBottomOf="@+id/article_view_count_korean" />

            <Button
                android:id="@+id/article_delete_button"
                android:layout_width="51.4dp"
                android:layout_height="28.7dp"
                android:layout_marginStart="9.6dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="13.8dp"
...
